--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Title -->
-    <title>{% block title %}{% endblock title %} - Cycletrails</title>
+    <title>{% block title %}{% endblock title %} - Biketrail</title>
 
     <!-- Plugin-CSS -->
     {% comment %} <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"> {% endcomment %}
@@ -101,14 +101,26 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/clo-icon-small-white.png' %}" alt="Logo"></a>
+                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/biketrail-logo-proto1-small-white-text-only.png' %}" alt="Logo"></a>
                 
                 {% comment %} <a href="{% url 'trail_list' %}"><!-- <span class="lnr lnr-map-marker" style="font-size:1em"></span> --> <big>TRAILS</big></a>
                 <a href="{% url 'trail_new' %}"><span class="lnr lnr-plus-circle" style="font-size:1em;"></span></i></a> {% endcomment %}
                 
             </div>
             <div class="collapse navbar-collapse" id="primary_menu">
-                <ul class="nav navbar-nav mainmenu">
+                <!-- <ul class="nav navbar-nav mainmenu">
+                    <li><a href="{% url 'trail_list' %}">Trails</a></li>
+                    <li><a href="{% url 'trail_new' %}"> Add Trail</i></a></li>
+                    {% if user.is_authenticated %}
+                        <div style="margin-bottom: 10px;"></div>
+                        <li><a href="{% url 'user_trails' %}">View my trails</a></li>
+                        <li><a href="{% url 'password_change' %}">Change password</a></li>
+                        <li><a href="{% url 'logout' %}">Log out</a></li>
+                    {% else %}
+                        <div style="margin-bottom: 10px;"></div>
+                        <li><a href="{% url 'signup' %}">Join Us</a></li>
+                        <li><a href="{% url 'login' %}">Login</a></li>
+                    {% endif %} -->
                     {% comment %} <li><a href="{% url 'trail_list' %}"> TRAILS</a></li>
                     <li><a href="{% url 'trail_new' %}"><span class="lnr lnr-plus-circle"></span></i></a></li> {% endcomment %}
                     {% comment %} <li><a href="#">Media</a></li> {% endcomment %}
@@ -125,11 +137,11 @@
                         <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="far fa-user"></i> {{ user.username }}</a>
                         
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                            <a class="dropdown-item" href="{% url 'user_trails' %}" style="color:#768ede;"><i class="fas fa-map-marker"></i>&nbsp; View my trails</a>
+                            <a class="dropdown-item" href="{% url 'user_trails' %}" style="color:#CED560;"><i class="fas fa-map-marker"></i>&nbsp; View my trails</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url 'password_change' %}" style="color:#768ede;"><i class="fas fa-unlock"></i>&nbsp; Change password</a>
+                            <a class="dropdown-item" href="{% url 'password_change' %}" style="color:#CED560;"><i class="fas fa-unlock"></i>&nbsp; Change password</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url 'logout' %}" style="color:#768ede;"><i class="fas fa-times-circle"></i>&nbsp; Log out</a>
+                            <a class="dropdown-item" href="{% url 'logout' %}" style="color:#CED560;"><i class="fas fa-times-circle"></i>&nbsp; Log out</a>
                         </div>
 
                     {% else %}
@@ -198,7 +210,7 @@
             <div class="row">
                 <div class="col-xs-12 col-md-5">
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    <span>Copyright &copy; <script>document.write(new Date().getFullYear());</script> Cycletrails 
+                    <span>Copyright &copy; <script>document.write(new Date().getFullYear());</script> Biketrail <br /> 
                         {% comment %} <br /> Design by <a href="https://colorlib.com" target="_blank">Colorlib</a></span> {% endcomment %}
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     <div class="space-30 hidden visible-xs"></div>
