--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
 
             {% if user.is_authenticated %}
 
-              <li><a href="{% url 'profile' %}"><strong><i class="fas fa-user-circle"></i> {{ user.username }}</strong></a></li>
+              <li><a href="{% url 'profile' %}"><i class="fas fa-user-circle"></i> {{ user.username }}</a></li>
     
             {% comment %} <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="far fa-user"></i> {{ user.username }}</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
@@ -86,8 +86,8 @@
 
             {% else %}
 
-              <li><a href="{% url 'login' %}"><strong><i class="fas fa-user"></i> Login</a></strong></li>
-              <li><a href="{% url 'signup' %}"><strong><i class="fas fa-user-plus"></i> Sign Up</strong></a></li>
+              <li><a href="{% url 'login' %}"><i class="fas fa-user"></i> Login</a></li>
+              <li><a class="btn btn-ghost btn-ghost-white btn-xs" href="{% url 'signup' %}"><strong style="margin-left:10px;margin-right:10px;"><i class="fas fa-user-plus"></i> Join Us</strong></a></li>
 
             {% endif %}
 
