--- a/templates/base.html
+++ b/templates/base.html
@@ -111,12 +111,14 @@
 
   <!-- START: footer -->
   <footer role="contentinfo" class="probootstrap-footer">
-    <div class="row ">
+    <div class="row">
       <div class="col-md-12 text-center">
         <p>
           <small>&copy; 2018 <a href="{% url 'home' %}">Biketrail</a></small><br />
-          <small>Made with <span style="color: red;">&hearts;</span> in Timisoara, Romania</small><br />
+          <small>Crafted with <span style="color: red;">&hearts;</span> in Timisoara, Romania</small><br />
           <small>by <a href="https://www.ciclotrasee.ro" target="_blank">Ciclotrasee</a></small>
+          <hr />
+          <p style="font-size:12px;">v0.0.27 <br /> PRE-ALPHA <br /> <a href="http://m.me/ciclotrasee" target="_blank"><i class="fas fa-comment"></i> Give us feedback</a></p>
           <!-- <a href="#" class="js-backtotop">Back to top</a> -->
         </p>
       </div>
