--- a/templates/trail_detail.html
+++ b/templates/trail_detail.html
@@ -196,12 +196,12 @@
         </div>
     </div> {% endcomment %}
 
-    <div class="container" class="margin-top:10px;">
+    <!-- <div class="container" class="margin-top:10px;">
         {% if user.is_authenticated and user == trail.author %}
             <p><a href="{% url 'trail_edit' trail.pk %}" ><i class="far fa-edit"></i> Edit</a>  &nbsp;&nbsp;
             <a href="{% url 'trail_delete' trail.pk %}" ><i class="far fa-trash-alt"></i> Delete</a></p>
         {% endif %} </small></p>
-    </div>
+    </div> -->
 
 </section>
 
