--- a/templates/trail_edit.html
+++ b/templates/trail_edit.html
@@ -18,7 +18,7 @@
         <div class="row mb60">
             <div class="col-md-8 col-md-offset-2 probootstrap-animate">
                 <p>Make your modifications for "{{ trail.title }}" bellow.</p>
-                <form action="#" method="post" class="probootstrap-form">
+                <form action="" method="post" class="probootstrap-form" enctype="multipart/form-data">
 
                     {% csrf_token %}
                     {{ form|crispy }}
