--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -18,7 +18,7 @@
             <div class="col-md" style="text-align:center;">
 
                 <a class="btn btn-primary" href="{% url 'profile_trails' %}"><i class="fas fa-map-marked-alt"></i> My trails</a>
-                <a class="btn btn-primary" href="{% url 'profile_settings' %}"><i class="fas fa-cog"></i> Settings</a>
+                <a class="btn btn-primary" href="{% url 'profile_settings' %}"><i class="fas fa-user-edit"></i> Edit profile</a>
                 <a class="btn btn-primary" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Logout</a>
 
             </div>
