--- a/templates/user_profile_trails.html
+++ b/templates/user_profile_trails.html
@@ -18,18 +18,21 @@
             <div class="col-md" style="text-align:center; margin-bottom:100px;"> 
 
                     <a class="btn btn-primary active" href="{% url 'profile_trails' %}"><i class="fas fa-map-marked-alt"></i> My trails</a>
-                    <a class="btn btn-primary" href="{% url 'profile_settings' %}"><i class="fas fa-cog"></i> Settings</a>
+                    <a class="btn btn-primary" href="{% url 'profile_settings' %}"><i class="fas fa-user-edit"></i> Edit profile</a>
                     <a class="btn btn-primary" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Logout</a>
 
             </div>
 
-            {% for trail in object_list %}
-                {% if user.is_authenticated and user == trail.author %}
+            {% if object_list %}
 
-                    <div class="col-md probootstrap-animate">
-                        <div class="row probootstrap-block-image" style="  padding: 20px;
-                        -webkit-box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.1);
-                        box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.1);">
+                {% for trail in object_list %}
+
+                    {% if user == trail.author %}
+
+                        <div class="col-md probootstrap-animate">
+                            <div class="row probootstrap-block-image" style="  padding: 20px;
+                            -webkit-box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.1);
+                            box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.1);">
 
                                 <div class="column">
                                     <figure><a href="{% url 'trail_detail' trail.pk %}"><img src="{{ trail.image.url }}"></a></figure>
@@ -53,11 +56,18 @@
                                     <p><a href="#"><i class="fas fa-share-alt"></i> Share</a></p>
                                 </div>
 
+                            </div>
                         </div>
-                    </div>
 
-                {% endif %}
-            {% endfor %}
+                    {% endif %}
+
+                {% endfor %}
+
+            {% else %}
+
+                <p style="text-align:center; margin-top:50px;">You got no trails. <br /><a class="btn-xs" href="{% url 'trail_new' %}"><i class="fas fa-plus"></i> Add one</a></p>
+
+            {% endif %}  
 
         </div>
     </div>
